Fix Java 8 code and add examples for stream and references