@@ -59,7 +59,7 @@ public class FunctionalInterfacesTest {
 
     @Test
     public void constructorReference() throws Exception {
-        List<String> stringList = List.of("a", "b", "b", "c", "d", "d");
+        List<String> stringList = Arrays.asList("a", "b", "b", "c", "d", "d");
 //        assertEquals(6, stringList.size());
 
         // Add the strings to a Set
